--- a/angular.json
+++ b/angular.json
@@ -95,6 +95,12 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "repo": "https://github.com/iSynthetica/angular-app.git"
+          }
         }
       }
     }
